2010-04-23  David Kilzer  <ddkilzer@apple.com>

        <http://webkit.org/b/38030> Add WebCore::dumpTextEncodingNameMap() to dump text encoding map on debug builds

        Reviewed by Alexey Proskuryakov.

        * platform/text/TextEncodingRegistry.cpp:
        (WebCore::dumpTextEncodingNameMap): Added.
        * platform/text/TextEncodingRegistry.h:
        (WebCore::dumpTextEncodingNameMap): Added declaration.

2010-04-22  Tony Chang  <tony@chromium.org>

        Reviewed by Dan Bernstein.

        Crash in WebCore::TextIterator::handleTextNode() encountered in Google rich-text products
        https://bugs.webkit.org/show_bug.cgi?id=37950

        Test: editing/text-iterator/rtl-selection-crash.html

        * editing/TextIterator.cpp:
        (WebCore::TextIterator::handleTextNode):

2010-04-22  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Dan Bernstein and Beth Dakin.

        Links around blocks (e.g. divs) results in too many VoiceOver call outs
        https://bugs.webkit.org/show_bug.cgi?id=37079
        <rdar://problem/7234118>

        The basic change is to modify the AccessibilityRenderObject tree
        traversal methods to account for inline continuations in the
        render tree and make the accessibility tree look as if
        continuations didn't exist - the same as if CSS blocks could just
        sit in CSS inlines. This is slightly tricky code but creates a
        much saner accessibility tree.
        
        Tests: accessibility/image-link-inline-cont.html
               accessibility/image-link.html
               accessibility/inline-continuations.html

        * accessibility/AccessibilityRenderObject.cpp:
        (WebCore::isInlineWithContinuation): Helper function for traversal functions to use in accounting for continuations.
        (WebCore::firstChildInContinuation): ditto
        (WebCore::firstChildConsideringContinuation): ditto
        (WebCore::lastChildConsideringContinuation): ditto